--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
-/* METHOD 1 */
-
-.parent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.center-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
 
-/* METHOD 1 */
-
-.parent {
-    display: grid;
-    place-items: center;
-}
+ <div class="center-div">
+ Ayoo I'm in the center of your screen ya fool
+ </div>
